More changes before deadline